--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,6 +11,7 @@ nav {
   /* align-items: center; */
   justify-content: space-between;
   position: fixed;
+  z-index: 4;
  }
 
  .website-name {
